--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url= https://github.com/rafa1712/file/raw/main/LATIHAN%20KSK%20%26%20KSP%20SMP.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url= https://github.com/rafa1712/file/raw/main/Latihan%20Soal%20Teori%20Bilangan%20November%202021.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
