--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Kumpulan Latihan Soal KSK & KSP Matematika</title>
+  <title>Kumpulan File-File Soal & Pembahasan Matematika</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url= https://github.com/rafa1712/file/raw/main/LATIHAN%20KSK%20%26%20KSP%20SMP.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
